--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@emotion/core": "^10.0.27",
     "babel-cli": "^6.26.0",
     "express": "^4.17.1",
+    "firebase": "^7.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
