--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.27",
     "babel-cli": "^6.26.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.6.1",
     "react": "^16.12.0",
