--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.6.1",
+    "login": "^0.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
