--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.27",
+    "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
