--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.27",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "antd": "^3.26.5",
+    "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "express": "^4.17.1",
     "firebase": "^7.6.1",
@@ -40,6 +46,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^4.4.1"
   },
   "browserslist": [
