--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-cli": "^6.26.0",
     "express": "^4.17.1",
     "firebase": "^7.6.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
